# rust-cid

./: Cargo.toml
cli/: Cargo.toml  main.rs
src/: error.rs  lib.rs
tests/: lib.rs
