[package]
name = "cid"
version = "0.3.1"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
edition = "2018"
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]

license = "MIT"

readme = "README.md"

[package.metadata.release]
upload-doc = true
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[dependencies]
multihash = { git = "https://github.com/dvc94ch/rust-multihash", branch = "cli" }
multibase = { git = "https://github.com/multiformats/rust-multibase" }
integer-encoding = "1.0"
juniper = { version = "0.14", optional = true }
rand = { version = "0.7", optional = true }

[features]
default = ["random"]
graphql = ["juniper"]
random = ["rand"]

[workspace]
members = ["cli"]
