[package]
name = "cid"
version = "0.3.1"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
edition = "2018"
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]

license = "MIT"

readme = "README.md"

[package.metadata.release]
upload-doc = true
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[dependencies]
getrandom = { version = "^0.1.13", optional = true }
multihash = "0.9"
multibase = { git = "https://github.com/multiformats/rust-multibase" }
integer-encoding = "1.0"
juniper = { version = "0.14", optional = true }
rand = { version = "0.7", optional = true }

[features]
default = ["random"]
graphql = ["juniper"]
random = ["rand", "getrandom"]

[workspace]
members = ["cli"]
